@@ -88,8 +88,7 @@ public class LambdaHttpHandler implements RequestHandler<AwsProxyRequest, AwsPro
             try {
                 //log.info("Got message: " + msg.getClass().getName());
 
-                if (msg instanceof HttpResponse) {
-                    HttpResponse res = (HttpResponse) msg;
+                if (msg instanceof HttpResponse res) {
                     responseBuilder.setStatusCode(res.status().code());
 
                     if (request.getRequestSource() == AwsProxyRequest.RequestSource.ALB) {
@@ -101,15 +100,11 @@ public class LambdaHttpHandler implements RequestHandler<AwsProxyRequest, AwsPro
                             continue; // ignore transfer encoding, chunked screws up message and response
                         }
                         for (String v : res.headers().getAll(name)) {
-                            if (name.equalsIgnoreCase("Transfer-Encoding") && v.contains("chunked")) {
-                                continue;
-                            }
                             responseBuilder.getMultiValueHeaders().add(name, v);
                         }
                     }
                 }
-                if (msg instanceof HttpContent) {
-                    HttpContent content = (HttpContent) msg;
+                if (msg instanceof HttpContent content) {
                     int readable = content.content().readableBytes();
                     if (baos == null && readable > 0) {
                         baos = createByteStream();
@@ -118,8 +113,7 @@ public class LambdaHttpHandler implements RequestHandler<AwsProxyRequest, AwsPro
                         baos.write(content.content().readByte());
                     }
                 }
-                if (msg instanceof FileRegion) {
-                    FileRegion file = (FileRegion) msg;
+                if (msg instanceof FileRegion file) {
                     if (file.count() > 0 && file.transferred() < file.count()) {
                         if (baos == null)
                             baos = createByteStream();
@@ -176,9 +170,9 @@ public class LambdaHttpHandler implements RequestHandler<AwsProxyRequest, AwsPro
                         sb.append("=");
                         sb.append(v);
                     } else {
-                        sb.append(URLEncoder.encode(e.getKey(), StandardCharsets.UTF_8.name()));
+                        sb.append(URLEncoder.encode(e.getKey(), StandardCharsets.UTF_8));
                         sb.append("=");
-                        sb.append(URLEncoder.encode(v, StandardCharsets.UTF_8.name()));
+                        sb.append(URLEncoder.encode(v, StandardCharsets.UTF_8));
                     }
                 }
             }
