@@ -5,7 +5,7 @@ import static io.quarkus.opentelemetry.runtime.config.build.OTelBuildConfig.Secu
 import static io.quarkus.opentelemetry.runtime.config.build.OTelBuildConfig.SecurityEvents.SecurityEventType.AUTHORIZATION_FAILURE;
 import static io.quarkus.opentelemetry.runtime.config.build.OTelBuildConfig.SecurityEvents.SecurityEventType.AUTHORIZATION_SUCCESS;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -43,17 +43,22 @@ import io.quarkus.deployment.annotations.BuildSteps;
 import io.quarkus.deployment.annotations.ExecutionTime;
 import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.CombinedIndexBuildItem;
+import io.quarkus.deployment.builditem.LaunchModeBuildItem;
+import io.quarkus.deployment.builditem.RunTimeConfigurationDefaultBuildItem;
 import io.quarkus.gizmo2.Expr;
 import io.quarkus.gizmo2.Var;
 import io.quarkus.gizmo2.creator.BlockCreator;
 import io.quarkus.gizmo2.desc.MethodDesc;
 import io.quarkus.opentelemetry.runtime.config.build.OTelBuildConfig;
 import io.quarkus.opentelemetry.runtime.config.build.OTelBuildConfig.SecurityEvents.SecurityEventType;
+import io.quarkus.opentelemetry.runtime.config.build.SamplerType;
+import io.quarkus.opentelemetry.runtime.config.build.TracesBuildConfig;
 import io.quarkus.opentelemetry.runtime.tracing.TracerRecorder;
 import io.quarkus.opentelemetry.runtime.tracing.cdi.TracerProducer;
 import io.quarkus.opentelemetry.runtime.tracing.instrumentation.websockets.WebSocketTracesInterceptorImpl;
 import io.quarkus.opentelemetry.runtime.tracing.security.EndUserSpanProcessor;
 import io.quarkus.opentelemetry.runtime.tracing.security.SecurityEventUtil;
+import io.quarkus.runtime.LaunchMode;
 import io.quarkus.vertx.http.deployment.spi.FrameworkEndpointsBuildItem;
 import io.quarkus.vertx.http.deployment.spi.StaticResourcesBuildItem;
 
@@ -84,22 +89,22 @@ public class TracerProcessor {
         // Find all known SpanExporters and SpanProcessors
         Collection<String> knownClasses = new HashSet<>();
         knownClasses.add(ID_GENERATOR.toString());
-        index.getAllKnownImplementors(ID_GENERATOR)
+        index.getAllKnownImplementations(ID_GENERATOR)
                 .forEach(classInfo -> knownClasses.add(classInfo.name().toString()));
         knownClasses.add(RESOURCE.toString());
-        index.getAllKnownImplementors(RESOURCE)
+        index.getAllKnownImplementations(RESOURCE)
                 .forEach(classInfo -> knownClasses.add(classInfo.name().toString()));
         knownClasses.add(SAMPLER.toString());
-        index.getAllKnownImplementors(SAMPLER)
+        index.getAllKnownImplementations(SAMPLER)
                 .forEach(classInfo -> knownClasses.add(classInfo.name().toString()));
         knownClasses.add(SPAN_EXPORTER.toString());
-        index.getAllKnownImplementors(SPAN_EXPORTER)
+        index.getAllKnownImplementations(SPAN_EXPORTER)
                 .forEach(classInfo -> knownClasses.add(classInfo.name().toString()));
         knownClasses.add(SPAN_PROCESSOR.toString());
-        index.getAllKnownImplementors(SPAN_PROCESSOR)
+        index.getAllKnownImplementations(SPAN_PROCESSOR)
                 .forEach(classInfo -> knownClasses.add(classInfo.name().toString()));
         knownClasses.add(TEXT_MAP_PROPAGATOR.toString());
-        index.getAllKnownImplementors(TEXT_MAP_PROPAGATOR)
+        index.getAllKnownImplementations(TEXT_MAP_PROPAGATOR)
                 .forEach(classInfo -> knownClasses.add(classInfo.name().toString()));
 
         Set<String> retainProducers = new HashSet<>();
@@ -129,6 +134,33 @@ public class TracerProcessor {
         return new UnremovableBeanBuildItem(new UnremovableBeanBuildItem.BeanClassNamesExclusion(retainProducers));
     }
 
+    /**
+     * Checks the {@link LaunchModeBuildItem} to see if we are in {@linkplain LaunchMode#DEVELOPMENT development mode}.
+     * <p>
+     * Checks the {@link TracesBuildConfig#sampler()} for a value of {@code parentbased_traceidratio} or
+     * {@code traceidration}. If set to one of those values, the {@code quarkus.otel.traces.sampler.arg} is defaulted
+     * to 100% (1.0d) in dev mode.
+     * </p>
+     *
+     * @param launchMode the current launch mode
+     * @param buildConfig the build configuration used to determine if the sampler arg needs to be overridden in dev mode
+     *
+     * @return a new build item setting the sampler argument to 100% if we are in dev mode, otherwise returns {@code null}
+     */
+    @BuildStep
+    RunTimeConfigurationDefaultBuildItem setDevModeSamplerDefault(LaunchModeBuildItem launchMode, OTelBuildConfig buildConfig) {
+        // In dev mode, use 100% sampling for better debugging experience
+        if (launchMode.getLaunchMode() == LaunchMode.DEVELOPMENT) {
+            final String sampler = buildConfig.traces().sampler();
+            if (SamplerType.PARENT_BASED_TRACE_ID_RATIO.getValue().equals(sampler)
+                    || SamplerType.TRACE_ID_RATIO.getValue().equals(sampler)) {
+                return new RunTimeConfigurationDefaultBuildItem("quarkus.otel.traces.sampler.arg", "1.0d");
+            }
+        }
+        // Let the default configuration apply
+        return null;
+    }
+
     @BuildStep
     void dropNames(
             Optional<FrameworkEndpointsBuildItem> frameworkEndpoints,
@@ -145,7 +177,7 @@ public class TracerProcessor {
                         // Management routes are using full urls -> Extract the path.
                         if (endpoint.startsWith("http://") || endpoint.startsWith("https://")) {
                             try {
-                                nonApplicationUris.add(new URL(endpoint).getPath());
+                                nonApplicationUris.add(URI.create(endpoint).getPath());
                             } catch (Exception ignored) { // Not an URL
                                 nonApplicationUris.add(endpoint);
                             }
